build/jenkins/Ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: jenkins-namespace
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - jenkins.aijiamuyingfang.cn
    secretName: jenkins-secret
  rules:
  - host: jenkins.aijiamuyingfang.cn
    http:
      paths:
      - backend:
          serviceName: jenkins
          servicePort: 8080
  - http:
      paths:
      - path: /jenkins
        backend:
          serviceName: jenkins
          servicePort: 8080
